<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/etUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_url"
            android:importantForAutofill="no"
            android:inputType="textUri" />

        <EditText
            android:id="@+id/etToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_token"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/etSenders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_senders"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/etKeywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_keywords"
            android:importantForAutofill="no"
            android:inputType="text" />
    </LinearLayout>
</ScrollView>
